force-app/main/default/objects/Answer_Choice__c/fields/Check_Result__c.field-meta.xml
<CustomField>
    <fullName>Check_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Check Result</label>
    <referenceTo>Question_Result__c</referenceTo>
    <relationshipName>Answer_Choices</relationshipName>
    <type>Lookup</type>
</CustomField>