force-app/main/default/objects/Answer_Choice__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ParentId</label>
    <referenceTo>Answer_Choice__c</referenceTo>
    <relationshipName>Selection_Attributes</relationshipName>
    <type>Lookup</type>
</CustomField>